@@ -30,6 +30,9 @@ cod-tools (unreleased)
         their atomic numbers.
     - COD::CIF::DDL::DDLm::Validate:
       - replaced '\d' with '[0-9]' in several regular expressions.
+    - COD::CIF::DDL::Ranges:
+      - moved the handling of a Perl capture variable into a conditional
+        statement in the parse_range() subroutine.
     - COD::ErrorHandler:
       - Perl capture variable outside conditional statement.
 
